--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   align-items: center;
   justify-content: center;
   background: var(--app-white);
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .container {
