--- a/src/components/appContainer/styles.module.css
+++ b/src/components/appContainer/styles.module.css
@@ -11,3 +11,13 @@
   font-weight: 600;
   text-align: center;
 }
+
+.step-container {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .step-container {
+    width: 600px;
+  }
+}
