--- a/src/components/appContainer/styles.module.css
+++ b/src/components/appContainer/styles.module.css
@@ -3,13 +3,20 @@
 }
 
 .container header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 70px;
+}
+
+.container header svg * {
+  fill: var(--app-blue);
 }
 
 .container h1 {
   color: var(--app-black);
   font-weight: 600;
-  text-align: center;
+  margin-left: 10px;
 }
 
 .step-container {
