--- a/src/components/appContainer/components/step4/styles.module.css
+++ b/src/components/appContainer/components/step4/styles.module.css
@@ -12,3 +12,87 @@
 .tick-box svg > * {
   transform: scale(0.45);
 }
+
+.tick-box svg polyline {
+  -webkit-animation: checkmark 0.45s ease-in-out 0.7s backwards;
+  animation: checkmark 0.45s ease-in-out 0.7s backwards;
+}
+
+.tick-box svg circle {
+  -webkit-animation: checkmark-circle 0.6s ease-in-out backwards;
+  animation: checkmark-circle 0.6s ease-in-out backwards;
+}
+.tick-box svg circle:nth-of-type(2) {
+  -webkit-animation: colored-circle 0.6s ease-in-out 0.7s backwards;
+  animation: colored-circle 0.6s ease-in-out 0.7s backwards;
+}
+
+@-webkit-keyframes checkmark {
+  0% {
+    stroke-dashoffset: 100px;
+  }
+
+  100% {
+    stroke-dashoffset: 100px;
+  }
+}
+
+@-ms-keyframes checkmark {
+  0% {
+    stroke-dashoffset: 100px;
+  }
+
+  100% {
+    stroke-dashoffset: 200px;
+  }
+}
+
+@keyframes checkmark {
+  0% {
+    stroke-dashoffset: 40px;
+  }
+
+  100% {
+    stroke-dashoffset: -10px;
+  }
+}
+
+@-webkit-keyframes checkmark-circle {
+  0% {
+    stroke-dashoffset: 480px;
+  }
+
+  100% {
+    stroke-dashoffset: 960px;
+  }
+}
+
+@-ms-keyframes checkmark-circle {
+  0% {
+    stroke-dashoffset: 240px;
+  }
+
+  100% {
+    stroke-dashoffset: 480px;
+  }
+}
+
+@keyframes checkmark-circle {
+  0% {
+    stroke-dashoffset: 480px;
+  }
+
+  100% {
+    stroke-dashoffset: 960px;
+  }
+}
+
+@keyframes colored-circle {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 100;
+  }
+}
