--- a/src/components/appContainer/components/stepper/styles.module.css
+++ b/src/components/appContainer/components/stepper/styles.module.css
@@ -47,6 +47,13 @@
   background: var(--app-blue) !important;
 }
 
+@media screen and (min-width: 375px) {
+  .container > div > span {
+    width: 50px;
+    height: 50px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .container > div > span {
     width: 40px;
