--- a/src/components/appContainer/components/step3/styles.module.css
+++ b/src/components/appContainer/components/step3/styles.module.css
@@ -1,5 +1,28 @@
+.container {
+  animation: slide-in 0.9s forwards;
+  -webkit-animation: slide-in 0.9s forwards;
+}
+
 .card-container div:nth-of-type(2) {
   margin-top: 30px;
+}
+
+@keyframes slide-in {
+  0% {
+    transform: translateX(-100px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@-webkit-keyframes slide-in {
+  0% {
+    -webkit-transform: translateX(-100px);
+  }
+  100% {
+    -webkit-transform: translateX(0%);
+  }
 }
 
 @media screen and (min-width: 768px) {
