--- a/src/components/appContainer/components/step4/styles.module.css
+++ b/src/components/appContainer/components/step4/styles.module.css
@@ -1,3 +1,8 @@
+.container {
+  animation: slide-in 0.9s forwards;
+  -webkit-animation: slide-in 0.9s forwards;
+}
+
 .tick-box {
   display: flex;
   justify-content: center;
@@ -25,6 +30,24 @@
 .tick-box svg circle:nth-of-type(2) {
   -webkit-animation: colored-circle 0.6s ease-in-out 0.7s backwards;
   animation: colored-circle 0.6s ease-in-out 0.7s backwards;
+}
+
+@keyframes slide-in {
+  0% {
+    transform: translateX(-100px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@-webkit-keyframes slide-in {
+  0% {
+    -webkit-transform: translateX(-100px);
+  }
+  100% {
+    -webkit-transform: translateX(0%);
+  }
 }
 
 @-webkit-keyframes checkmark {
